# Daedalus

./: .gitignore  .gitmodules  .gitsubmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build-all.sh
Android/: ShellAndroid.cpp
Daedalus/: Bootstrap.cpp  Bootstrap.h  Console.cpp  Console.h  Daedalus.cpp  Daedalus.h  Engine.cpp  Engine.h  Explorer.cpp  Explorer.h  Initializers.cpp  Initializers.h  Main.cpp  Mesh.cpp  Mesh.h  Meshes.cpp  Meshes.h  Pipeline.cpp  Pipeline.h  Platform.cpp  Platform.h  Scene.cpp  Scene.h  Shell.cpp  Shell.h  Types.h  daedalus.cpp
Daedalus.xcodeproj/: project.pbxproj
Daedalus.xcodeproj/xcuserdata/jad.xcuserdatad/xcschemes/: xcschememanagement.plist
Daedalus/iOS/: AppDelegate.m  ViewController.h  ViewController.mm  main.m
Daedalus/macOS/: AppDelegate.h  AppDelegate.m
DaedalusVK/: main.cpp
DaedalusVK.xcodeproj/: project.pbxproj
DaedalusVK.xcodeproj/xcuserdata/jad.xcuserdatad/xcschemes/: xcschememanagement.plist
Darwin/: ExplorerDarwin.cpp  ExplorerDarwin.h  PlatformDarwin.cpp  PlatformDarwin.h  ShellDarwin.cpp  ShellDarwin.h
Darwin/Daedalus.xcodeproj/: project.pbxproj
Darwin/Daedalus.xcodeproj/project.xcworkspace/xcuserdata/jad.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
Darwin/Daedalus.xcodeproj/xcshareddata/xcschemes/: Daedalus (iOS).xcscheme  Daedalus (macOS).xcscheme
Darwin/Daedalus.xcodeproj/xcuserdata/jad.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Darwin/iOS/: ViewController.h  ViewController.mm
Darwin/iOS/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
Darwin/macOS/: AppDelegate.m  Info.plist  Main.m  ViewController.h  ViewController.mm
Darwin/macOS/Resources/: Main.storyboard
Darwin/macOS/Resources/Base.lproj/: Main.storyboard
Engine/: CMakeLists.txt
Engine/shaders/: shader.frag.glsl  shader.vert.glsl
Engine/shaders/opengl/: shader.frag.glsl  shader.vert.glsl
Engine/shaders/vulkan/: shader.vert.glsl
Engine/src/: assert.h  daedalus.h  defines.h  endian.h  error.h  helper.h  memory.h  types.h
Engine/src/core/: assert.h  clock.cpp  debug.h  defines.h  engine.cpp  engine.h  error.h  file.cpp  file.h  log.cpp  log.h  memory.cpp  memory.h  resources.cpp  resources.h  shell.cpp  time.h  time.inl  types.h
Engine/src/daedalus/: clock.cpp  clock.h  engine.h  memory.cpp  memory.h  shell.cpp
Engine/src/graphics/: camera.cpp  camera.h  gui.cpp  gui.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  vulkan_renderer.cpp  vulkan_renderer.h
Engine/src/graphics/opengl/: pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  texture.cpp  texture.h
Engine/src/graphics/vulkan/: renderer.h
Engine/src/math/: linalg.cpp  linalg.h  time.h  time.inl  types.h
Engine/src/memory/: stack_allocator.cpp  stack_allocator.h
Engine/src/renderer/: bootstrap.cpp  bootstrap.h  init.cpp  init.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  types.h
Engine/src/utils/: endian.h  unique.h  vulkan.h
Engine/src/world/: camera.h
Headers/: CommandBuffers.h  CommandBuffers.hpp  CommandPool.h  CommandPool.hpp  DaedalusEngine.h  DaedalusEngine.hpp  DepthBuffers.h  DepthBuffers.hpp  FrameBuffers.hpp  GraphicsPipeline.h  GraphicsPipeline.hpp  IndexBuffers.h  IndexBuffers.hpp  Instance.h  Instance.hpp  LogicalDevice.h  ModelLoader.h  ModelLoader.hpp  PhysicalDevice.h  PhysicalDevice.hpp  SwapChain.h  SyncObjects.hpp  TextureImage.h  UniformBuffers.h  UniformBuffers.hpp  ValidationLayers.hpp  VertexBuffers.h  VertexBuffers.hpp
Linux/: ExplorerLinux.cpp  ExplorerLinux.h  ShellWayland.cpp  ShellXCB.cpp
Models/: Rose.gltf  Rose.mtl
Shaders/: ColoredTriangle.frag  ColoredTriangle.vert  ColoredTriangle.vert.glsl  Triangle.frag  Triangle.frag.glsl  Triangle.vert  TriangleMesh.vert  shader.frag
Sources/: CommandBuffers.cc  CommandBuffers.cpp  CommandBuffers.hpp  CommandPool.cc  CommandPool.cpp  DaedalusEngine.cc  DaedalusEngine.cpp  DaedalusEngine.hpp  DepthBuffers.cc  DepthBuffers.cpp  FrameBuffers.cc  FrameBuffers.cpp  FrameBuffers.hpp  GraphicsPipeline.cc  GraphicsPipeline.cpp  ImageViews.cc  ImageViews.cpp  ImageViews.hpp  IndexBuffers.cc  IndexBuffers.cpp  IndexBuffers.hpp  Instance.cc  Instance.cpp  LogicalDevice.cc  LogicalDevice.cpp  LogicalDevice.hpp  Main.cc  Main.cpp  ModelLoader.cc  ModelLoader.cpp  ModelLoader.hpp  PhysicalDevice.cc  PhysicalDevice.cpp  PhysicalDevice.hpp  QueueFamily.cc  QueueFamily.cpp  QueueFamily.hpp  RenderPass.cc  RenderPass.cpp  RenderPass.hpp  (+21 more)
Testbed/: CMakeLists.txt
Testbed/src/: main.cpp
Tests/: CMakeLists.txt
Tests/src/: allocator.cpp  endian.cpp  test.h
Windows/: ExplorerWindows.cpp  ExplorerWindows.h  Main.cpp  PlatformWindows.cpp  PlatformWindows.h  ShellWin32.cpp  ShellWindows.cpp  ShellWindows.h
Windows/Visual Studio/: Daedalus.sln  Daedalus.vcxproj  Daedalus.vcxproj.filters  cpp.hint  packages.config
engine/: BUILD  build.sh
engine/src/: defines.h  entry.h  game_types.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  ddls_memory.c  ddls_memory.h  ddls_string.c  ddls_string.h  event.c  event.h  input.c  input.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_darwin.c  platform_linux.c  platform_windows.c
iOS/: AppDelegate.h  SceneDelegate.h  SceneDelegate.m
macOS/: ViewController.h  ViewController.mm  main.m
macOS/Resources/Base.lproj/: Main.storyboard
testbed/: BUILD  build.sh
testbed/src/: entry.c  game.c  game.h
